--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
       "@types/eslint__js": "^8.42.3",
       "@types/express": "^4.17.21",
       "@types/node": "^22.3.0",
+      "@types/uuid": "^10.0.0",
       "eslint": "^9.9.0",
       "prettier": "^3.3.3",
       "ts-node-dev": "^2.0.0",
